kuber_course/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service: 
            name: helloworld
            port:
              number: 5000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-hosts
# spec:
#   rules:
#   - host: hello
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: helloworld
#             port:
#               number: 5000
